# Particles-Simulator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTES.md  README.md  TODO.md
data/: cube.json  fixed_rope.json  icosphere.json  molecule1.json  world1.json  world2.json  world_default.json
rust/: .gitignore  Cargo.toml  README.md  build.rs
rust/src/: cmd.rs  config.rs  main.rs
rust/src/classes/: camera.rs  container.rs  grid.rs  mesh.rs  mod.rs  molecule.rs  particle.rs  renderer.rs  simulation.rs
rust/src/classes/containers/: cube_container.rs  mod.rs  sphere_container.rs
rust/src/classes/particles/: sphere.rs
rust/src/utils/: camera_utils.rs  drag_particles.rs  filepath.rs  key_events.rs  mod.rs  parser.rs  ray.rs
shaders/: containerFragmentShader.glsl  containerVertexShader.glsl  floorVertexShader.glsl  fragmentShader.glsl  geometryShader.glsl  modelFragmentShader.glsl  modelOrientedVertexShader.glsl  modelVertexShader.glsl  vertexShader.glsl
src/: cmd.hpp  config.hpp  main.cpp  sal.h
src/classes/: camera.cpp  camera.hpp  container.cpp  container.hpp  grid.cpp  grid.hpp  mesh.cpp  mesh.hpp  model.hpp  molecule.cpp  molecule.hpp  particle.cpp  particle.hpp  plane.cpp  plane.hpp  renderer.cpp  renderer.hpp  simulation.cpp  simulation.hpp
src/classes/containers/: cubeContainer.cpp  cubeContainer.hpp  sphereContainer.cpp  sphereContainer.hpp
src/classes/particles/: sphere.cpp  sphere.hpp
src/dependencies/glew/: glew.c
src/utils/: camera_utils.cpp  camera_utils.hpp  drag_particles.cpp  drag_particles.hpp  mpi_manager.cpp  mpi_manager.hpp  parser.hpp  ray.cpp  ray.hpp  texture_utils.cpp  texture_utils.hpp
