[package]
name = "rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
glium = "*"
glutin = "*"
rand = "*"
nalgebra = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rayon = "*"
clap = "*"
num_cpus = "*"

[[bin]]
name = "ParticlesSimulator"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.bench]
opt-level = 3
debug = true
debug-assertions = true

[profile.release]
opt-level = 3